add file jenkins

--- a/fitlifepro/src/app/component/home/home.component.html
+++ b/fitlifepro/src/app/component/home/home.component.html
@@ -1,1 +1,13 @@
-<p>home works!</p>
+<nav class="nav-container">
+  <div class="nav-wrapper">
+    <ul class="nav-menu">
+      <li class="nav-item nav-item-active"><a href="#home">Home</a></li>
+      <li class="nav-item"><a href="#about">About Us</a></li>
+      <li class="nav-item"><a href="#contact">Contact Us</a></li>
+      <li class="nav-item"><a href="#category">Category</a></li>
+      <li class="nav-item"><a href="#blogs">Blogs</a></li>
+      <li class="nav-item"><a href="#recipes">Recipes</a></li>
+      <li class="nav-item"><a href="#gift">Gift A Plan</a></li>
+    </ul>
+  </div>
+</nav>
