add frontend in dashboard user

--- a/fitlifepro/src/app/app.component.html
+++ b/fitlifepro/src/app/app.component.html
@@ -1,4 +1,43 @@
-<!-- NG-ZORRO -->
-<a href="https://github.com/NG-ZORRO/ng-zorro-antd" target="_blank" style="display: flex;align-items: center;justify-content: center;height: 100%;width: 100%;">
-  <img height="300" src="https://img.alicdn.com/tfs/TB1X.qJJgHqK1RjSZFgXXa7JXXa-89-131.svg">
-</a>
+<nz-layout class="layout">
+  <nz-sider>
+    <div class="logo" >
+      <img  alt="avatar" class="avatar" src="https://www.hiclipart.com/free-transparent-background-png-clipart-hspng/download">
+
+    <div class="user-info" >
+      <strong >chaimaa</strong>
+    </div>
+    </div>
+
+    <ul nz-menu nzTheme="dark"nzMode="inline">
+      <li nz-menu-item routerLink="/dashboard">
+        <span nz-icon nzType="dashboard"></span>
+        <span>Dashboard</span>
+      </li>
+
+      <li nz-menu-item routerLink="/workout">
+        <span nz-icon nzType="split-cells"></span>
+        <span>workout</span>
+      </li>
+
+      <li nz-menu-item routerLink="/activity">
+        <span nz-icon nzType="control"></span>
+        <span>activity</span>
+      </li>
+
+      <li nz-menu-item routerLink="/goal">
+        <span nz-icon nzType="fund"></span>
+        <span>goal</span>
+      </li>
+    </ul>
+
+  </nz-sider>
+
+  <nz-layout class="right-layout">
+    <nz-content>
+      <div class="inner-content">
+        <router-outlet></router-outlet>
+      </div>
+    </nz-content>
+  </nz-layout>
+
+</nz-layout>
