add frontend form about activity

--- a/fitlifepro/src/app/component/RECIPES/recipe-page-open/recipe-page-open.component.html
+++ b/fitlifepro/src/app/component/RECIPES/recipe-page-open/recipe-page-open.component.html
@@ -1,1 +1,158 @@
-<p>recipe-page-open works!</p>
+<header class="header">
+  <nav class="navigation">
+    <a href="#" class="nav-link nav-link-active">Home</a>
+    <a href="#" class="nav-link">About Us</a>
+    <a href="#" class="nav-link">Contact Us</a>
+    <a href="#" class="nav-link">Category</a>
+    <a href="#" class="nav-link">Blogs</a>
+    <a href="#" class="nav-link">Recipes</a>
+    <a href="#" class="nav-link">Gift A Plan</a>
+  </nav>
+  <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/a4bfe87151e017d481dcd3270274933b661e61ebf8589f720b6c6bc7bccb149f?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Logo" class="logo" />
+</header>
+
+<main class="main-content">
+  <h1 class="recipe-title">Name of the Recipe will be here</h1>
+  <p class="recipe-date">24 January 2022</p>
+  <p class="recipe-author">-Name here</p>
+
+  <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/5ecd1751bbb200d5fe9d7065b26993ba4ba44a45b55fcb70bc46dc8340302cb5?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Recipe image" class="recipe-image" />
+
+  <section class="ingredients-section">
+    <h2 class="section-title">Ingredients</h2>
+    <ul class="ingredients-list">
+      <li class="ingredient-item">
+        <span class="ingredient-dot"></span>
+        <span class="ingredient-name">Rice (Qty)</span>
+      </li>
+      <li class="ingredient-item">
+        <span class="ingredient-dot"></span>
+        <span class="ingredient-name">Tomato (Qty)</span>
+      </li>
+      <li class="ingredient-item">
+        <span class="ingredient-dot"></span>
+        <span class="ingredient-name">Lemon (Qty)</span>
+      </li>
+      <li class="ingredient-item">
+        <span class="ingredient-dot"></span>
+        <span class="ingredient-name">Chicken (Qty)</span>
+      </li>
+      <li class="ingredient-item">
+        <span class="ingredient-dot"></span>
+        <span class="ingredient-name">Beans (Qty)</span>
+      </li>
+      <li class="ingredient-item">
+        <span class="ingredient-dot"></span>
+        <span class="ingredient-name">Herbs (Qty)</span>
+      </li>
+    </ul>
+  </section>
+
+  <section class="recipe-instructions">
+    <h2 class="section-title">Recipe</h2>
+    <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/d3fcfd3ab65d9ccf39ae87efa02f3397e3fd1d2c7054ccc3b495e8a65b79e5c4?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Recipe preparation" class="recipe-prep-image" />
+    <p class="recipe-description">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Venenatis dictum quisque at amet pellentesque. Augue porttitor volutpat fringilla nulla pretium rhoncus. Faucibus id faucibus sit venenatis sit eros, vulputate tempus aliquam. Adipiscing natoque congue in volutpat at pharetra sit viverra. Metus et tempus bibendum egestas pellentesque. Amet, sem sed sed leo egestas. Quis in ullamcorper massa malesuada egestas vitae. Lobortis at vitae eget nibh ornare gravida. Purus ultrices pulvinar sit mi. Faucibus mauris sit felis massa malesuada enim felis viverra viverra. Fermentum enim nunc, in lorem eu. A risus tristique senectus quam. Ultrices enim in amet tempus gravida lectus sed consequat. Et fringilla est malesuada amet integer ac, posuere ac nec. Sit arcu blandit magnis id etiam. Cursus nisl enim mauris, pharetra risus adipiscing pretium. Velit nibh pretium tincidunt adipiscing lectus massa. Dolor viverra id aliquet purus quis vestibulum. Laoreet gravida elementum sed varius metus lobortis ornare cras. pharetra sit viverra. Metus et tempus bibendum egestas pellentesque. Amet, sem sed sed leo egestas.
+    </p>
+
+    <div class="recipe-step">
+      <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/8b1dafdad4d9dcb564308847d07d9a07493d0e606012d40c1a410fcf5d3ba632?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Recipe step" class="recipe-step-image" />
+      <p class="recipe-step-description">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Venenatis dictum quisque at amet pellentesque. Augue porttitor volutpat fringilla nulla pretium rhoncus. Faucibus id faucibus sit venenatis sit eros, vulputate tempus aliquam. Adipiscing natoque congue in volutpat at pharetra sit viverra. Metus et tempus bibendum egestas pellentesque. Amet, sem sed sed leo egestas. Quis in ullamcorper massa malesuada egestas vitae. Lobortis at vitae eget nibh ornare gravida. Purus ultrices pulvinar sit mi. Faucibus mauris sit felis massa malesuada enim felis viverra viverra. Fermentum enim nunc, in lorem eu. A risus tristique senectus quam. Ultrices enim in amet tempus gravida lectus sed consequat.
+      </p>
+    </div>
+
+    <p class="recipe-conclusion">
+      Et fringilla est malesuada amet integer ac, posuere ac nec. Sit arcu blandit magnis id etiam. Cursus nisl enim mauris, pharetra risus adipiscing pretium. Velit nibh pretium tincidunt adipiscing lectus massa. Dolor viverra id aliquet purus quis vestibulum. Laoreet gravida elementum sed varius metus lobortis ornare cras. pharetra sit viverra. Metus et tempus bibendum egestas pellentesque. Amet, sem sed sed leo egestas. Quis in ullamcorper massa malesuada egestas vitae. Lobortis at vitae eget nibh ornare gravida. Purus ultrices pulvinar sit mi. Faucibus mauris sit felis massa malesuada enim felis viverra viverra. Fermentum enim nunc, in lorem eu. A risus tristique senectus quam. Ultrices enim in amet tempus gravida lectus sed consequat. Et fringilla est malesuada amet integer ac, posuere ac nec. Sit arcu blandit magnis id etiam. Cursus nisl enim mauris, pharetra risus adipiscing pretium. Velit nibh pretium tincidunt adipiscing lectus massa.
+    </p>
+  </section>
+
+  <section class="comments-section">
+    <h2 class="section-title">Comments</h2>
+    <article class="comment">
+      <h3 class="comment-author">Name will be here</h3>
+      <p class="comment-text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pharetra laoreet orci blandit sagittis, purus. Proin rhoncus enim enim cras aliquam, vel at consectetur. Felis suspendisse sollicitudin mattis interdum eget ornare. Cursus a parturient facilisis in aliquam sed a habitant. Mi donec ullamcorper ut fusce dolor, mauris tincidunt. Ut bibendum adipiscing tincidunt faucibus lobortis convallis est malesuada duis. Pellentesque at sed purus, eget ac parturient quis.
+      </p>
+      <div class="comment-actions">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/e15f63c2c458b422b14aa9053c476ee1c7812e7ab2a1c120efa51085a3e43287?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Like" class="action-icon" />
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/93c2fb0353cb3481a9780544e823189999bb15c7d7b373892946455f10c57266?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Dislike" class="action-icon" />
+        <button class="reply-button">Reply</button>
+      </div>
+    </article>
+
+    <article class="comment">
+      <h3 class="comment-author">Name will be here</h3>
+      <p class="comment-text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pharetra laoreet orci blandit sagittis, purus. Proin rhoncus enim enim cras aliquam, vel at consectetur. Felis suspendisse sollicitudin mattis interdum eget ornare. Cursus a parturient facilisis in aliquam sed a habitant. Mi donec ullamcorper ut fusce dolor, mauris tincidunt. Ut bibendum adipiscing tincidunt
+      </p>
+      <div class="comment-actions">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/e15f63c2c458b422b14aa9053c476ee1c7812e7ab2a1c120efa51085a3e43287?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Like" class="action-icon" />
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/93c2fb0353cb3481a9780544e823189999bb15c7d7b373892946455f10c57266?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Dislike" class="action-icon" />
+        <button class="reply-button">Reply</button>
+      </div>
+    </article>
+
+    <article class="comment">
+      <h3 class="comment-author">Name will be here</h3>
+      <p class="comment-text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pharetra laoreet orci blandit sagittis, purus. Proin rhoncus enim enim cras aliquam, vel at consectetur. Felis suspendisse sollicitudin mattis interdum eget ornare. Cursus a parturient facilisis in aliquam sed a habitant. Mi donec ullamcorper ut fusce dolor, mauris tincidunt. Ut bibendum adipiscing tincidunt faucibus lobortis convallis est malesuada duis. Pellentesque at sed purus, eget ac parturient quis.
+      </p>
+      <div class="comment-actions">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/e15f63c2c458b422b14aa9053c476ee1c7812e7ab2a1c120efa51085a3e43287?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Like" class="action-icon" />
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/93c2fb0353cb3481a9780544e823189999bb15c7d7b373892946455f10c57266?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Dislike" class="action-icon" />
+        <button class="reply-button">Reply</button>
+      </div>
+    </article>
+  </section>
+
+  <section class="similar-recipes">
+    <h2 class="section-title">Similar <span class="highlight">Recipes</span></h2>
+    <div class="recipe-grid">
+      <article class="recipe-card">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/16dcc524faf0e938785bd0c21fc8838734b193b2cab27ad7317f3d2b0e839289?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Similar recipe 1" class="recipe-card-image" />
+        <h3 class="recipe-card-title">Name of the recipe will be here Name of the recipe will be here</h3>
+        <p class="recipe-card-description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit...
+        </p>
+        <div class="recipe-card-footer">
+          <button class="read-recipe-button">Read Recipe</button>
+          <div class="recipe-card-meta">
+            <p class="recipe-card-date">24 January 2022</p>
+            <p class="recipe-card-author">-Name here</p>
+          </div>
+        </div>
+      </article>
+
+      <article class="recipe-card">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/6c8b5349ba6d6faebcadf9bbb3c68788e333b79e52b344be59b6f17dd4edb92e?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Similar recipe 2" class="recipe-card-image" />
+        <h3 class="recipe-card-title">Name of the recipe will be here Name of the recipe will be here</h3>
+        <p class="recipe-card-description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit...
+        </p>
+        <div class="recipe-card-footer">
+          <button class="read-recipe-button">Read Recipe</button>
+          <div class="recipe-card-meta">
+            <p class="recipe-card-date">24 January 2022</p>
+            <p class="recipe-card-author">-Name here</p>
+          </div>
+        </div>
+      </article>
+
+      <article class="recipe-card">
+        <img src="https://cdn.builder.io/api/v1/image/assets/TEMP/a2fa1d878482d94c9878394a05a64513c56414ba59c79e72c6142fcd48f5319c?placeholderIfAbsent=true&apiKey=fcaa7293172548b6a2e1a132d616c7c2" alt="Similar recipe 3" class="recipe-card-image" />
+        <h3 class="recipe-card-title">Name of the recipe will be here Name of the recipe will be here</h3>
+        <p class="recipe-card-description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quam sagittis aliquam Lorem ipsum dolor sit amet, consectetur adipiscing elit...
+        </p>
+        <div class="recipe-card-footer">
+          <button class="read-recipe-button">Read Recipe</button>
+          <div class="recipe-card-meta">
+            <p class="recipe-card-date">24 January 2022</p>
+            <p class="recipe-card-author">-Name here</p>
+          </div>
+        </div>
+      </article>
+    </div>
+  </section>
+</main>
